# asdlab

./: .flake8  .gitignore  README.md  postgrest.conf  pyproject.toml  requirements.txt  setup_roles.sql
client/public/: index.html
client/src/: App.js
client/src/components/: Unauthorized.js  admin.css  admin.js  login.css  login.js  manager.css  manager.js
client/src/css/: admin.css
docs/: oauth2-redirect.html  redoc.html  swagger.html
migrations/: env.py
migrations/versions/: ae14cf12f0a6_initial_db_structure.py
models/: __init__.py  config.py  player_role.py  tables.py
