[tool.poetry]
name = "player-auction-db-management"
version = "0.0.1"
description = "DB Management for PostgREST api"
authors = ["Abraham Francis <abfr049@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.20"
alembic = "^1.4.3"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = """
(
    /(
        migrations/*
    )/
)
"""
